--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+
+<body class="bg-[#f0fdf4]">
     <!-- Navbar -->
     <div class="navbar bg-base-100 shadow-sm bg-[#15803D] text-white">
         <div class="navbar-start">
@@ -19,7 +21,8 @@
                             d="M4 6h16M4 12h8m-8 6h16" />
                     </svg>
                 </div>
-                <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
+                <ul tabindex="0"
+                    class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
                     <li><a>About</a></li>
                     <li><a>Gallery</a></li>
                     <li><a>Plant a Tree</a></li>
@@ -39,19 +42,37 @@
         </div>
     </div>
     <!-- Hero Section -->
-     <section class="flex justify-between items-center bg-[rgba(207,240,220,1)] sm:h-[383px] sm:px-[135px] px-4 py-8">
+    <section class="flex justify-between items-center bg-[rgba(207,240,220,1)] sm:h-[383px] sm:px-[135px] px-4 py-8">
         <div>
             <img src="assets/hero-leaf1.png" alt="">
         </div>
         <div class="text-center items-center">
             <h1 class="sm:text-4xl font-bold mb-[8px]">Plant a Tree, Grow a Future</h1>
-            <p class="text-[0.875rem]">Join our mission to plant 1 million trees and make the Earth greener for future<br>generations.</p>
+            <p class="text-[0.875rem]">Join our mission to plant 1 million trees and make the Earth greener for
+                future<br>generations.</p>
             <a class="btn bg-[#FACC15] text-[#15803D] rounded-full border-none mt-[24px]">Get Involved</a>
         </div>
         <div>
             <img src="assets/hero-leaf2.png" alt="">
         </div>
-     </section>
+    </section>
+    <section class="mt-[100px] flex justify-center items-start gap-10 mr-[30px]">
+        <!-- Sidebar (Categories) -->
+        <div>
+            <h1 class="text-xl font-bold">Categories</h1>
+            <ul id="category-list" class="ml-4 space-y-2"></ul>
+        </div>
+
+        <!-- Card Container (Centered) -->
+        <div id="card-container" class="grid grid-cols-3 gap-7 justify-center">
+            <!-- Card 1 -->
+            <!-- Repeat other cards... -->
+        </div>
+
+        <!-- Right Sidebar -->
+        <div class="bg-white w-[250px] h-[739.6px]"></div>
+    </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
