About The camping section done

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <img src="assets/hero-leaf2.png" alt="">
         </div>
     </section>
-    <section class="mt-[100px] flex justify-center items-start gap-10 mr-[30px]">
+    <!-- Choose Your Trees -->
+    <h1 class="text-3xl font-bold mb-4 mt-[100px] text-center">Choose Your Trees</h1>
+    <section class="mt-[40px] flex justify-center items-start gap-10 mr-[30px]">
         <!-- Sidebar (Categories) -->
         <div>
             <h1 class="text-xl font-bold mb-2">Categories</h1>
@@ -77,6 +79,21 @@
             <ul id="cart-items" class="p-2 rounded-lg"></ul>
             <hr id="cart-divider" class="border-t border-gray-300 my-4">
             <div id="cart-total" class="font-bold text-lg mt-2 ">
+            </div>
+        </div>
+    </section>
+    <!-- About Campaign -->
+    <section class="mx-[415px] ">
+        <h1 class="text-3xl font-bold mb-[40px] mt-[100px] text-center">About the Campaign</h1>
+        <div class="flex justify-between items-center gap-7">
+            <img src="assets/about.png" alt="" class="mb-[100px]">
+            <div class="text-gray-700">
+                <p class="mb-2">Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
+                <ul class="list-disc pl-6">
+                    <li>Restoring natural habitats</li>
+                    <li>Improving air quality</li>
+                    <li>Combating climate change</li>
+                </ul>
             </div>
         </div>
     </section>
