Our Impact Section Done

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
         <div class="flex justify-between items-center gap-7">
             <img src="assets/about.png" alt="" class="mb-[100px]">
             <div class="text-gray-700">
-                <p class="mb-2">Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
+                <p class="mb-2">Green Earth is a global tree plantation initiative dedicated to fighting climate change.
+                    Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help
+                    restore forests, create habitats for wildlife, and combat global warming.</p>
                 <ul class="list-disc pl-6">
                     <li>Restoring natural habitats</li>
                     <li>Improving air quality</li>
@@ -97,6 +99,25 @@
             </div>
         </div>
     </section>
+    <!-- Our Impact -->
+    <section class="bg-[#d6f5e8] py-16">
+        <h2 class="text-2xl font-bold text-center mb-10 text-[#1a2e2b]">Our Impact</h2>
+        <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+            <div class="bg-white rounded-lg shadow px-12 py-8 flex flex-col items-center w-[320px]">
+                <span class="text-2xl font-bold text-green-700 mb-2">500K+</span>
+                <span class="text-gray-700">Trees Planted</span>
+            </div>
+            <div class="bg-white rounded-lg shadow px-12 py-8 flex flex-col items-center w-[320px]">
+                <span class="text-2xl font-bold text-green-700 mb-2">120+</span>
+                <span class="text-gray-700">Communities Involved</span>
+            </div>
+            <div class="bg-white rounded-lg shadow px-12 py-8 flex flex-col items-center w-[320px]">
+                <span class="text-2xl font-bold text-green-700 mb-2">30+</span>
+                <span class="text-gray-700">Countries Reached</span>
+            </div>
+        </div>
+    </section>
+    
     <script src="script.js"></script>
 </body>
 
