--- a/index.html
+++ b/index.html
@@ -117,7 +117,29 @@
             </div>
         </div>
     </section>
-    
+    <!-- Plant a Tree Today Donation Form -->
+    <section class="bg-[#17643a] py-20">
+        <h2 class="text-2xl font-bold text-center mb-10 text-white">Plant a Tree Today</h2>
+        <div class="flex justify-center">
+            <form class="bg-[#219150] rounded-lg px-8 py-10 flex flex-col gap-4 shadow w-[650px]">
+                <input type="text" placeholder="Your Name"
+                    class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required/>
+                <input type="email" placeholder="Your Email Address"
+                    class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required/>
+                <select class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required>
+                    <option>Number of Trees</option>
+                    <option>1</option>
+                    <option>5</option>
+                    <option>10</option>
+                    <option>20</option>
+                    <option>50</option>
+                </select>
+                <button type="submit"
+                    class="bg-[#FACC15] text-[#15803D] font-semibold rounded-full py-3 mt-2 w-[570px]">Donate
+                    Now</button>
+            </form>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 
