--- a/index.html
+++ b/index.html
@@ -135,11 +135,16 @@
                     <option>50</option>
                 </select>
                 <button type="submit"
-                    class="bg-[#FACC15] text-[#15803D] font-semibold rounded-full py-3 mt-2 w-[570px]">Donate
+                    class="btn bg-[#FACC15] text-[#15803D] rounded-full border-none w-[570px]">Donate
                     Now</button>
             </form>
         </div>
     </section>
+    <!-- Footer -->
+    <footer class="bg-[#14532d] text-white py-6">
+        <div class="container mx-auto text-center">
+            <p>&copy; 2025 Green Earth. All Rights Reserved.</p>
+        </div>
     <script src="script.js"></script>
 </body>
 
