--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a>Plant a Tree</a></li>
                 </ul>
             </div>
-            <p class="btn btn-ghost text-xl ml-0 sm:ml-[135px]">Green Earth</p>
+            <p class="text-2xl font-bold ml-0 sm:ml-[135px]">Green Earth</p>
         </div>
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -121,11 +121,11 @@
     <section class="bg-[#17643a] py-20">
         <h2 class="text-2xl font-bold text-center mb-10 text-white">Plant a Tree Today</h2>
         <div class="flex justify-center">
-            <form class="bg-[#219150] rounded-lg px-8 py-10 flex flex-col gap-4 shadow w-[650px]">
+            <form class="bg-[#15803d] rounded-lg px-8 py-10 flex flex-col gap-4 shadow w-[650px]">
                 <input type="text" placeholder="Your Name"
-                    class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required/>
+                    class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required />
                 <input type="email" placeholder="Your Email Address"
-                    class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required/>
+                    class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required />
                 <select class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required>
                     <option>Number of Trees</option>
                     <option>1</option>
@@ -134,8 +134,7 @@
                     <option>20</option>
                     <option>50</option>
                 </select>
-                <button type="submit"
-                    class="btn bg-[#FACC15] text-[#15803D] rounded-full border-none w-[570px]">Donate
+                <button type="submit" class="btn bg-[#FACC15] text-[#15803D] rounded-full border-none w-[570px]">Donate
                     Now</button>
             </form>
         </div>
@@ -145,6 +144,31 @@
         <div class="container mx-auto text-center">
             <p>&copy; 2025 Green Earth. All Rights Reserved.</p>
         </div>
+    </footer>
+    <!-- Tree Details Modal -->
+    <div id="tree-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+        <div class="bg-white rounded-xl shadow-lg p-8 w-full max-w-2xl relative flex flex-col gap-6">
+            <button id="close-modal"
+                class="absolute top-3 right-3 text-gray-500 hover:text-red-600 text-2xl">&times;</button>
+            <h2 id="modal-name" class="text-3xl font-bold mb-2"></h2>
+            <img id="modal-image" src="" alt="Tree Image"
+                class="w-full h-64 object-cover rounded mb-2 border border-green-200">
+            <div class="mb-2">
+                <span class="font-bold">Category:</span> <span id="modal-category" class="text-gray-800"></span>
+            </div>
+            <div class="mb-2">
+                <span class="font-bold">Price:</span> <span id="modal-price" class="text-gray-800"></span>
+            </div>
+            <div class="mb-2">
+                <span class="font-bold">Description:</span> <span id="modal-description" class="text-gray-700"></span>
+            </div>
+            <div class="flex justify-end mt-4">
+                <button id="close-modal-btn"
+                    class="bg-gray-200 px-5 py-2 rounded hover:bg-gray-300 font-semibold">Close</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
