--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a>Plant a Tree</a></li>
                 </ul>
             </div>
-            <p class="text-2xl font-bold ml-0 sm:ml-[135px]">Green Earth</p>
+            <p class="btn btn-ghost text-xl ml-0 sm:ml-[135px]">Green Earth</p>
         </div>
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -43,55 +43,60 @@
         </div>
     </div>
     <!-- Hero Section -->
-    <section class="flex justify-between items-center bg-[rgba(207,240,220,1)] sm:h-[383px] sm:px-[135px] px-4 py-8">
-        <div>
-            <img src="assets/hero-leaf1.png" alt="">
+    <section
+        class="flex flex-col sm:flex-row justify-between items-center bg-[rgba(207,240,220,1)] sm:h-[383px] sm:px-[135px] px-4 py-8 gap-6">
+        <div class="w-full sm:w-auto flex justify-center mb-4 sm:mb-0">
+            <img src="assets/hero-leaf1.png" alt="" class="max-w-[120px] sm:max-w-none">
         </div>
-        <div class="text-center items-center">
-            <h1 class="sm:text-4xl font-bold mb-[8px]">Plant a Tree, Grow a Future</h1>
+        <div class="text-center items-center w-full sm:w-auto">
+            <h1 class="text-2xl sm:text-4xl font-bold mb-[8px]">Plant a Tree, Grow a Future</h1>
             <p class="text-[0.875rem]">Join our mission to plant 1 million trees and make the Earth greener for
                 future<br>generations.</p>
             <a class="btn bg-[#FACC15] text-[#15803D] rounded-full border-none mt-[24px]">Get Involved</a>
         </div>
-        <div>
-            <img src="assets/hero-leaf2.png" alt="">
+        <div class="w-full sm:w-auto flex justify-center">
+            <img src="assets/hero-leaf2.png" alt="" class="max-w-[120px] sm:max-w-none">
         </div>
     </section>
     <!-- Choose Your Trees -->
-    <h1 class="text-3xl font-bold mb-4 mt-[100px] text-center">Choose Your Trees</h1>
-    <section class="mt-[40px] flex justify-center items-start gap-10 mr-[30px]">
+    <h1 class="text-2xl sm:text-3xl font-bold mb-4 mt-[40px] sm:mt-[100px] text-center">Choose Your Trees</h1>
+    <section class="flex flex-col sm:flex-row justify-center items-start gap-6 sm:gap-10 mr-0 sm:mr-[30px] px-2">
         <!-- Sidebar (Categories) -->
-        <div>
+        <div class="w-full sm:w-auto mb-6 sm:mb-0">
             <h1 class="text-xl font-bold mb-2">Categories</h1>
-            <ul id="category-list" class="ml-4 space-y-2"></ul>
+            <ul id="category-list" class="ml-0 sm:ml-4 space-y-2"></ul>
         </div>
 
         <!-- Card Container (Centered) -->
-        <div id="card-container" class="grid grid-cols-3 gap-7 justify-center">
+        <div id="card-container"
+            class="grid grid-cols-1 sm:grid-cols-3 gap-7 w-full sm:w-auto mx-auto sm:mx-0 justify-items-center">
             <!-- Card 1 -->
             <!-- Repeat other cards... -->
         </div>
 
         <!-- Right Sidebar -->
-        <div class="bg-white w-[250px] h-[739.6px] rounded-lg p-2 m-2">
-            <h1 class="text-3xl font-bold mb-2">Your Cart</h1>
+        <div
+            class="bg-white w-full sm:w-[250px] h-auto sm:h-[739.6px] rounded-lg p-4 sm:p-2 m-0 sm:m-2 flex flex-col shadow-md">
+            <h1 class="text-xl sm:text-3xl font-bold mb-2">Your Cart</h1>
             <!-- Cart items will be dynamically added here -->
             <ul id="cart-items" class="p-2 rounded-lg"></ul>
             <hr id="cart-divider" class="border-t border-gray-300 my-4">
-            <div id="cart-total" class="font-bold text-lg mt-2 ">
-            </div>
+            <div id="cart-total" class="font-bold text-base sm:text-lg mt-2"></div>
         </div>
     </section>
     <!-- About Campaign -->
-    <section class="mx-[415px] ">
-        <h1 class="text-3xl font-bold mb-[40px] mt-[100px] text-center">About the Campaign</h1>
-        <div class="flex justify-between items-center gap-7">
-            <img src="assets/about.png" alt="" class="mb-[100px]">
-            <div class="text-gray-700">
-                <p class="mb-2">Green Earth is a global tree plantation initiative dedicated to fighting climate change.
+    <section class="mx-2 sm:mx-[415px]">
+        <h1 class="text-2xl sm:text-3xl font-bold mb-[24px] sm:mb-[40px] mt-[24px] sm:mt-[100px] text-center">About the
+            Campaign</h1>
+        <div class="flex flex-col sm:flex-row justify-between items-center gap-6 sm:gap-7">
+            <img src="assets/about.png" alt=""
+                class="mb-4 sm:mb-[100px] w-full sm:w-auto max-w-[320px] sm:max-w-none rounded-lg" />
+            <div class="text-gray-700 w-full sm:w-auto">
+                <p class="mb-2 text-sm sm:text-base">Green Earth is a global tree plantation initiative dedicated to
+                    fighting climate change.
                     Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help
                     restore forests, create habitats for wildlife, and combat global warming.</p>
-                <ul class="list-disc pl-6">
+                <ul class="list-disc pl-4 sm:pl-6 text-sm sm:text-base mb-10">
                     <li>Restoring natural habitats</li>
                     <li>Improving air quality</li>
                     <li>Combating climate change</li>
@@ -100,33 +105,37 @@
         </div>
     </section>
     <!-- Our Impact -->
-    <section class="bg-[#d6f5e8] py-16">
-        <h2 class="text-2xl font-bold text-center mb-10 text-[#1a2e2b]">Our Impact</h2>
-        <div class="flex flex-col md:flex-row justify-center items-center gap-8">
-            <div class="bg-white rounded-lg shadow px-12 py-8 flex flex-col items-center w-[320px]">
-                <span class="text-2xl font-bold text-green-700 mb-2">500K+</span>
-                <span class="text-gray-700">Trees Planted</span>
+    <section class="bg-[#d6f5e8] py-10 sm:py-16">
+        <h2 class="text-xl sm:text-2xl font-bold text-center mb-6 sm:mb-10 text-[#1a2e2b]">Our Impact</h2>
+        <div class="flex flex-col sm:flex-row justify-center items-center gap-6 sm:gap-8 px-2">
+            <div
+                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px]">
+                <span class="text-xl sm:text-2xl font-bold text-green-700 mb-2">500K+</span>
+                <span class="text-gray-700 text-sm sm:text-base">Trees Planted</span>
             </div>
-            <div class="bg-white rounded-lg shadow px-12 py-8 flex flex-col items-center w-[320px]">
-                <span class="text-2xl font-bold text-green-700 mb-2">120+</span>
-                <span class="text-gray-700">Communities Involved</span>
+            <div
+                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px]">
+                <span class="text-xl sm:text-2xl font-bold text-green-700 mb-2">120+</span>
+                <span class="text-gray-700 text-sm sm:text-base">Communities Involved</span>
             </div>
-            <div class="bg-white rounded-lg shadow px-12 py-8 flex flex-col items-center w-[320px]">
-                <span class="text-2xl font-bold text-green-700 mb-2">30+</span>
-                <span class="text-gray-700">Countries Reached</span>
+            <div
+                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px]">
+                <span class="text-xl sm:text-2xl font-bold text-green-700 mb-2">30+</span>
+                <span class="text-gray-700 text-sm sm:text-base">Countries Reached</span>
             </div>
         </div>
     </section>
     <!-- Plant a Tree Today Donation Form -->
-    <section class="bg-[#17643a] py-20">
-        <h2 class="text-2xl font-bold text-center mb-10 text-white">Plant a Tree Today</h2>
-        <div class="flex justify-center">
-            <form class="bg-[#15803d] rounded-lg px-8 py-10 flex flex-col gap-4 shadow w-[650px]">
+    <section class="bg-[#17643a] py-10 sm:py-20 flex flex-col items-center">
+        <h2 class="text-xl sm:text-2xl font-bold text-center mb-6 sm:mb-10 text-white">Plant a Tree Today</h2>
+        <div class="flex justify-center w-full px-2">
+            <form
+                class="bg-[#219150] rounded-lg px-4 sm:px-8 py-6 sm:py-10 flex flex-col gap-4 shadow-lg w-full max-w-[570px]">
                 <input type="text" placeholder="Your Name"
-                    class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required />
+                    class="px-4 py-3 rounded bg-white text-gray-800 focus:outline-none w-full" required />
                 <input type="email" placeholder="Your Email Address"
-                    class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required />
-                <select class="px-4 py-2 rounded bg-white text-gray-800 focus:outline-none w-[570px]" required>
+                    class="px-4 py-3 rounded bg-white text-gray-800 focus:outline-none w-full" required />
+                <select class="px-4 py-3 rounded bg-white text-gray-800 focus:outline-none w-full" required>
                     <option>Number of Trees</option>
                     <option>1</option>
                     <option>5</option>
@@ -134,7 +143,8 @@
                     <option>20</option>
                     <option>50</option>
                 </select>
-                <button type="submit" class="btn bg-[#FACC15] text-[#15803D] rounded-full border-none w-[570px]">Donate
+                <button type="submit"
+                    class="bg-[#FACC15] text-[#15803D] font-semibold rounded-full py-3 mt-2 w-full hover:bg-yellow-400 transition">Donate
                     Now</button>
             </form>
         </div>
