--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <div class="navbar bg-base-100 shadow-sm bg-[#15803D] text-white">
         <div class="navbar-start">
             <div class="dropdown">
-                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <label tabindex="0" class="btn btn-ghost lg:hidden">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M4 6h16M4 12h8m-8 6h16" />
                     </svg>
-                </div>
+                </label>
                 <ul tabindex="0"
-                    class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
+                    class="menu menu-compact dropdown-content absolute left-2 top-12 mt-0 p-2 shadow bg-base-100 rounded-box w-52 z-50 text-green-700">
                     <li><a>About</a></li>
                     <li><a>Gallery</a></li>
                     <li><a>Plant a Tree</a></li>
