--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
         <h2 class="text-xl sm:text-2xl font-bold text-center mb-6 sm:mb-10 text-[#1a2e2b]">Our Impact</h2>
         <div class="flex flex-col sm:flex-row justify-center items-center gap-6 sm:gap-8 px-2">
             <div
-                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px]">
+                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px] transition-transform duration-300 hover:scale-105 hover:shadow-xl">
                 <span class="text-xl sm:text-2xl font-bold text-green-700 mb-2">500K+</span>
                 <span class="text-gray-700 text-sm sm:text-base">Trees Planted</span>
             </div>
             <div
-                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px]">
+                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px] transition-transform duration-300 hover:scale-105 hover:shadow-xl">
                 <span class="text-xl sm:text-2xl font-bold text-green-700 mb-2">120+</span>
                 <span class="text-gray-700 text-sm sm:text-base">Communities Involved</span>
             </div>
             <div
-                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px]">
+                class="bg-white rounded-lg shadow px-6 sm:px-12 py-6 sm:py-8 flex flex-col items-center w-full sm:w-[320px] transition-transform duration-300 hover:scale-105 hover:shadow-xl">
                 <span class="text-xl sm:text-2xl font-bold text-green-700 mb-2">30+</span>
                 <span class="text-gray-700 text-sm sm:text-base">Countries Reached</span>
             </div>
@@ -146,7 +146,7 @@
                 <input type="email" placeholder="Your Email Address"
                     class="px-4 py-3 rounded bg-white text-gray-800 focus:outline-none w-full" required />
                 <select class="px-4 py-3 rounded bg-white text-gray-800 focus:outline-none w-full" required>
-                    <option>Number of Trees</option>
+                    <option value="" disabled selected>Number of Trees</option>
                     <option>1</option>
                     <option>5</option>
                     <option>10</option>
