--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a>Plant a Tree</a></li>
                 </ul>
             </div>
-            <p class="btn btn-ghost text-xl ml-0 sm:ml-[135px]">Green Earth</p>
+            <p class="text-2xl font-bold ml-0 sm:ml-[135px]">Green Earth</p>
         </div>
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
